--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
 
     <!--添加联系人-->
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!--使用指纹-->
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
@@ -29,9 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.activity.login.LoginActivity" />
-
+        <activity android:name=".ui.activity.lock.LockActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -43,7 +45,6 @@
         <activity android:name=".ui.projectlist.informationize.InformationizeActivity" />
         <activity android:name=".ui.projectlist.govproject.GovProjectActivity" />
         <activity android:name=".ui.projectlist.specialrectification.SpecialRectificationActivity" />
-        <activity android:name=".ui.activity.lock.LockActivity" />
     </application>
 
 </manifest>
