--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,18 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
+
+        ndk {
+            //选择要添加的对应 cpu 类型的 .so 库。
+            abiFilters 'armeabi', 'armeabi-v7a','x86'
+        }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : applicationId,
+                JPUSH_APPKEY : "9e2a7c4da419edfad4c84f70",
+                JPUSH_CHANNEL : "developer-default",
+        ]
+
     }
     buildTypes {
         release {
@@ -37,9 +49,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    //navigation
-    implementation 'androidx.navigation:navigation-fragment:2.0.0'
-    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    // navigation
+    implementation "androidx.navigation:navigation-fragment:2.3.0-alpha02"
+    implementation "androidx.navigation:navigation-ui:2.3.0-alpha02"
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     //Room
     implementation 'android.arch.persistence.room:runtime:2.0.0'
@@ -64,6 +77,8 @@ dependencies {
     //    RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    //RxPermission
+//    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     //    glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
@@ -74,10 +89,17 @@ dependencies {
     implementation "com.orhanobut:hawk:2.0.1"
 
     //下拉刷新
-    implementation 'com.scwang.smart:refresh-layout-kernel:2.0.0-alpha-1'      //核心必须依赖
+    implementation 'com.scwang.smart:refresh-layout-kernel:2.0.0-alpha-1'
     implementation 'com.scwang.smart:refresh-header-classics:2.0.0-alpha-1'
 
     //banner
     implementation 'com.youth.banner:banner:1.4.10'
+    // 流式布局
+    implementation 'com.google.android:flexbox:2.0.1'
+
+    implementation 'cn.jiguang.sdk:jpush:3.5.8'
+    implementation 'cn.jiguang.sdk:jcore:2.3.0'
+    //TBS
+    implementation 'com.tencent.tbs.tbssdk:sdk:43697'
 
 }
