--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -34,10 +42,7 @@
         </activity>
         <activity android:name=".ui.activity.login.LoginActivity" />
         <activity android:name=".ui.activity.lock.LockActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MainActivity"/>
 
         <activity android:name=".ui.projectlist.dualprevention.DoublePreventionActivity" />
         <activity android:name=".ui.projectlist.evaluate.EvaluateActivity" />
@@ -45,6 +50,8 @@
         <activity android:name=".ui.projectlist.informationize.InformationizeActivity" />
         <activity android:name=".ui.projectlist.govproject.GovProjectActivity" />
         <activity android:name=".ui.projectlist.specialrectification.SpecialRectificationActivity" />
+        <activity android:name=".ui.activity.forgetpwd.ForgetPwdActivity" />
+        <activity android:name=".ui.activity.showfile.ShowFileActivity" />
     </application>
 
 </manifest>
